[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/tank_red.png" type="Texture" id=1]
[ext_resource path="res://sprites/tank_dark.png" type="Texture" id=2]
[ext_resource path="res://sprites/tank_green.png" type="Texture" id=3]
[ext_resource path="res://sprites/tank_blue.png" type="Texture" id=4]
[ext_resource path="res://sprites/tank_sand.png" type="Texture" id=5]
[ext_resource path="res://scripts/ui/PlayerItem.gd" type="Script" id=6]

[node name="PlayerItem" type="GridContainer"]
margin_right = 282.0
margin_bottom = 34.0
columns = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = 10.0
margin_right = 52.0
margin_bottom = 24.0
text = "Hoangkt"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="OptionButton" parent="."]
margin_left = 56.0
margin_right = 113.0
margin_bottom = 34.0
text = "Easy"
items = [ "Easy", null, false, 0, null, "Normal", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 0

[node name="Tank" type="OptionButton" parent="."]
margin_left = 117.0
margin_right = 213.0
margin_bottom = 34.0
text = "Green"
icon = ExtResource( 3 )
items = [ "Green", ExtResource( 3 ), false, 0, null, "Blue", ExtResource( 4 ), false, 1, null, "Red", ExtResource( 1 ), false, 2, null, "Black", ExtResource( 2 ), false, 3, null, "Sand", ExtResource( 5 ), false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team" type="OptionButton" parent="."]
margin_left = 217.0
margin_right = 246.0
margin_bottom = 34.0

[node name="Remove" type="Button" parent="."]
visible = false
margin_left = 250.0
margin_right = 314.0
margin_bottom = 34.0
text = "Remove"

[connection signal="item_selected" from="Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="item_selected" from="Tank" to="." method="_on_Tank_item_selected"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
